--- a/translations/nl-NL/ModulesCcvonlinepaymentsShop.nl-NL.xlf
+++ b/translations/nl-NL/ModulesCcvonlinepaymentsShop.nl-NL.xlf
@@ -3,6 +3,11 @@
   <file original="admin4209oq2jbrjzxds6jon" source-language="nl-NL" target-language="nl-NL" datatype="plaintext">
     <body>
       <trans-unit id="36a7bf6f8470762dd2d8a2a1ab32b6a4">
+        <source>Your payment was unsuccesfull. Please try again</source>
+        <target>Your payment was unsuccesfull. Please try again</target>
+        <note>Line: </note>
+      </trans-unit>
+      <trans-unit id="09e81d9430aa5e66ae26df8b1130af19">
         <source>Your payment was unsuccessful. Please try again</source>
         <target>Uw betaling is niet gelukt. Probeer het alstublieft opnieuw.</target>
         <note>Line: </note>
